--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
     "test": "jest --watch"
   },
   "keywords": [],
@@ -22,6 +22,7 @@
     "validator": "^13.1.17"
   },
   "devDependencies": {
+    "env-cmd": "^10.1.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6"
   }
